--- a/FicaFrio/Base.lproj/Main.storyboard
+++ b/FicaFrio/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -31,6 +30,7 @@
                     <navigationItem key="navigationItem" id="bqY-bP-R3Y"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="186.5" y="652.5"/>
         </scene>
@@ -75,18 +75,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEa-h0-07R">
-                                <rect key="frame" x="171" y="447" width="32" height="30"/>
+                                <rect key="frame" x="171" y="251" width="32" height="30"/>
                                 <state key="normal" title="Step"/>
                                 <connections>
                                     <segue destination="O4b-DK-hPY" kind="show" id="eHC-N4-ioQ"/>
                                 </connections>
                             </button>
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circuloPassos" translatesAutoresizingMaskIntoConstraints="NO" id="jeZ-L2-Rsu">
+                                <rect key="frame" x="67" y="317" width="240" height="226"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="q9u-m5-uPf" appends="YES" id="EsQ-M2-OKT"/>
+                                </connections>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="circleView" destination="jeZ-L2-Rsu" id="TlK-b8-VqW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WJw-a1-0Ke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="q9u-m5-uPf">
+                    <connections>
+                        <action selector="circleTap:" destination="NTb-Zd-tsJ" id="9sG-jc-lic"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1213.5" y="652.5"/>
         </scene>
@@ -182,4 +197,7 @@
             <point key="canvasLocation" x="-308.5" y="652.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="circuloPassos" width="543" height="543"/>
+    </resources>
 </document>
